--- a/public/css/style.css
+++ b/public/css/style.css
@@ -11,8 +11,7 @@
 }
 
 header nav {
-  -webkit-box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-          box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    box-shadow: 0px 4px 10px rgba(51, 51, 51, 0.25);
 }
 header nav .collapse ul li {
   margin: 0 5px;
@@ -85,6 +84,9 @@ main #about .container .row .col p {
 }
 main #features {
   padding: 100px 0;
+}
+main #features .container h1 {
+    color: #00A000;
 }
 main #features .container .row .col {
   padding: 35px;
