--- a/public/css/style.css
+++ b/public/css/style.css
@@ -10,9 +10,9 @@
   width: 80%;
 }
 
-header nav {
+/* header nav {
     box-shadow: 0px 4px 10px rgba(51, 51, 51, 0.25);
-}
+} */
 header nav .collapse ul li {
   margin: 0 5px;
 }
@@ -43,6 +43,7 @@ main #jumbotron {
   padding: 50px 0;
   border-radius: 0px 0px 100px 0px;
 }
+
 main #jumbotron .container .row .col .wrapp h1 {
   font-size: 55px;
   font-weight: bold;
